--- a/notebooks/5.EDA/5.1.EDA_variables_importantes.ipynb
+++ b/notebooks/5.EDA/5.1.EDA_variables_importantes.ipynb
@@ -785,8 +785,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6ef5dc0f",
+   "metadata": {},
+   "source": [
+    "Varios gráficos se pueden detectar la forma de dispersión de los puntos en los scatterplots heterocedasticidad, por lo que aunque en modelos como rf, xgboost y lgbm no tienen problema con esto, para modelos como regresión lineal, svm, o redes neuronales, la heterocedasticidad es ciertamente un problema que es preferible que sea eliminado.\n",
+    "Por otro lado podemos ver que los dormitorios no presentan una correlación lineal muy fuerte como si lo presentan los baños, pero los baños luego de 5, pierden un poco de su valor agregado.\n",
+    "Por el lado de SIMCE de matemáticas y lenguaje se ve que presentan una correlación lineal fuerte con el precio.\n",
+    "Aunque si vemos ahora la distancia al hospital más cercano y a la estación de metro más cercano, podemos ver que no existe una correlación lineal muy fuerte, pero como vimos anteriormente, esto no quiere decir que no nos pueda aportar poder predictivo si usamos modelos que pueden encontrar relaciones no lineales."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "fb185377",
    "metadata": {},
    "outputs": [
@@ -813,8 +824,8 @@
     "    axes[idx].set_ylabel('Precio', fontsize=9)\n",
     "    axes[idx].set_title(f'Precio vs {columna}', fontsize=10)\n",
     "    axes[idx].grid(True, alpha=0.3)\n",
-    "\n",
     "for idx in range(len(columnas), len(axes)):\n",
+    "\n",
     "    axes[idx].set_visible(False)\n",
     "\n",
     "plt.tight_layout()\n",
@@ -1811,8 +1822,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "14195b39",
+   "metadata": {},
+   "source": [
+    "Aquí podemos ver como los precios de las casas más caras se concentran en ciertas zonas geográficas, en este caso podemos ver que la mayor cantidad de casas de mayor precio se encuentra al noreste de la ciudad, pero también podemos identificar que por debajo de la latitud -33.5 es demasiado complicado encontrar viviendas en precios altos, mientras que si nos movemos más al norte, es mucho más sencillo."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "9c617a24",
    "metadata": {},
    "outputs": [
@@ -1828,17 +1847,13 @@
     }
    ],
    "source": [
-    "\n",
-    "import seaborn as sns\n",
-    "import pandas as pd \n",
-    "\n",
     "plt.figure(figsize=(12, 8)) \n",
     "\n",
     "\n",
     "scatter = plt.scatter(x=df['longitud'],\n",
     "                      y=df['latitud'],\n",
     "                      c=df['precio'],\n",
-    "                      cmap='plasma', # Puedes probar 'viridis', 'plasma', 'inferno', 'magma', 'RdYlBu', etc.\n",
+    "                      cmap='plasma',  # 'viridis', 'plasma', 'inferno', 'magma', 'RdYlBu'.\n",
     "                      s=10,          \n",
     "                      alpha=0.8)      \n",
     "\n",
