corrigiendo error en celda de distribucion de precio

--- a/notebooks/5.EDA/5.1.EDA_variables_importantes.ipynb
+++ b/notebooks/5.EDA/5.1.EDA_variables_importantes.ipynb
@@ -664,9 +664,7 @@
    "id": "d45985d9",
    "metadata": {},
    "source": [
-    "La distribución del precio muestra un sesgo positivo con una cola \n",
-    "alargada hacia valores altos. La mayor concentración de datos se ubica entre $20M-$60M, \n",
-    "mientras que propiedades de precios superiores son menos frecuentes, esta cola a la derecha extendida es característica de los mercados inmobiliarios"
+    "La distribución del precio muestra un sesgo positivo con una cola alargada hacia valores altos. La mayor concentración de datos se ubica entre $80M-$200M, mientras que propiedades de precios superiores son menos frecuentes, esta cola a la derecha extendida es característica de los mercados inmobiliarios"
    ]
   },
   {
