actualizando limpieza de datos

--- a/notebooks/3.limpieza_datos/3.1.limpieza_datos.ipynb
+++ b/notebooks/3.limpieza_datos/3.1.limpieza_datos.ipynb
@@ -10,12 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "755a26d1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -564,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "d4d7c604",
    "metadata": {},
    "outputs": [
@@ -580,8 +582,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "numeric_cols = df.select_dtypes(include='number').columns\n",
     "n_cols = 3 \n",
     "n_rows = (len(numeric_cols) + n_cols - 1) // n_cols\n",
@@ -941,12 +941,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "6d063aaf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import LabelEncoder\n",
     "le = LabelEncoder()\n",
     "df['comuna'] = le.fit_transform(df['comuna'])"
    ]
