actualizando regresion lineal y svm

--- a/notebooks/6.Training/6.2LRSVMTrain.ipynb
+++ b/notebooks/6.Training/6.2LRSVMTrain.ipynb
@@ -2,17 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "0378aba2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.svm import SVR\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import KFold\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from scipy import stats\n",
+    "from scipy.stats import jarque_bera, shapiro"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "92f3ee5a",
    "metadata": {},
    "outputs": [
@@ -246,7 +258,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "8e725194",
    "metadata": {},
    "outputs": [
@@ -274,10 +286,6 @@
     }
    ],
    "source": [
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "\n",
     "numeric_df = df.select_dtypes(include=[np.number])\n",
     "correlation_matrix = numeric_df.corr()\n",
     "\n",
@@ -294,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "40dcd675",
    "metadata": {},
    "outputs": [
@@ -321,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "95a1231e",
    "metadata": {},
    "outputs": [
@@ -336,7 +344,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "192e5770",
    "metadata": {},
    "outputs": [
@@ -393,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "a3966d39",
    "metadata": {},
    "outputs": [],
@@ -403,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "6facdfb2",
    "metadata": {},
    "outputs": [
@@ -413,7 +421,7 @@
        "4508"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "23b7ff54",
    "metadata": {},
    "outputs": [
@@ -439,7 +447,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,22 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "3694c6c7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "b519f527",
    "metadata": {},
    "outputs": [
@@ -493,41 +486,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "f393bff8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_metrics(y_true, y_pred):\n",
-    "    \"\"\"Calcula todas las métricas requeridas\"\"\"\n",
+    "def calculate_metrics(y_true, y_pred, escala='real'):\n",
+    "    \"\"\"\n",
+    "    Calcula métricas de regresión\n",
+    "    \n",
+    "    Args:\n",
+    "        y_true: valores reales\n",
+    "        y_pred: valores predichos\n",
+    "        escala: 'log' o 'real' - determina qué métricas calcular\n",
+    "    \"\"\"\n",
     "    mae = mean_absolute_error(y_true, y_pred)\n",
     "    mse = mean_squared_error(y_true, y_pred)\n",
     "    rmse = np.sqrt(mse)\n",
     "    r2 = r2_score(y_true, y_pred)\n",
     "    \n",
-    "    mae_percentage = (mae / y_true.mean()) * 100\n",
-    "    \n",
-    "    mape = np.mean(np.abs((y_true - y_pred) / y_true)) * 100\n",
-    "    \n",
-    "    return {\n",
+    "    metrics = {\n",
     "        'MAE': mae,\n",
-    "        'MAE_%': mae_percentage,\n",
     "        'RMSE': rmse,\n",
-    "        'R²': r2,\n",
-    "        'MAPE': mape\n",
-    "    }"
+    "        'R²': r2\n",
+    "    }\n",
+    "    \n",
+    "    # Solo calcular métricas porcentuales en escala REAL\n",
+    "    if escala == 'real':\n",
+    "        mae_percentage = (mae / y_true.mean()) * 100\n",
+    "        mape = np.mean(np.abs((y_true - y_pred) / y_true)) * 100\n",
+    "        metrics['MAE_%'] = mae_percentage\n",
+    "        metrics['MAPE'] = mape\n",
+    "    \n",
+    "    return metrics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "76e28152",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import KFold\n",
-    "import numpy as np\n",
-    "\n",
     "def cv_log_corrected(pipeline, X, y, cv=5):\n",
     "    kf = KFold(n_splits=cv, shuffle=True, random_state=42)\n",
     "    mae_scores = []\n",
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "aebe79e8",
    "metadata": {},
    "outputs": [
@@ -559,22 +559,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LINEAR REGRESSION\n",
+      "=== LINEAR REGRESSION ===\n",
+      "\n",
+      "--- ESCALA LOGARÍTMICA ---\n",
+      "MAE: 0.234\n",
+      "RMSE: 0.308\n",
+      "R²: 0.773\n",
+      "\n",
+      "--- ESCALA REAL (CLP) ---\n",
       "MAE: $54,646,711 CLP\n",
-      "MAE_%: 24.2%\n",
       "RMSE: $97,526,756 CLP\n",
       "R²: 0.663\n",
+      "MAE_%: 24.2%\n",
       "MAPE: 25.1%\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "import numpy as np\n",
-    "\n",
-    "print(\"LINEAR REGRESSION\")\n",
+    "print(\"=== LINEAR REGRESSION ===\")\n",
     "\n",
     "preprocessor = StandardScaler()\n",
     "\n",
@@ -586,12 +588,18 @@
     "lr_pipeline.fit(X_train, y_train)\n",
     "y_pred_lr = lr_pipeline.predict(X_test)\n",
     "\n",
-    "y_pred_lr = np.exp(y_pred_lr)\n",
+    "print(\"\\n--- ESCALA LOGARÍTMICA ---\")\n",
+    "metrics_lr_log = calculate_metrics(y_test, y_pred_lr, escala='log')\n",
+    "for metric, value in metrics_lr_log.items():\n",
+    "    print(f\"{metric}: {value:.3f}\")\n",
+    "\n",
+    "print(\"\\n--- ESCALA REAL (CLP) ---\")\n",
+    "y_pred_lr_clp = np.exp(y_pred_lr)\n",
     "y_test_real = np.exp(y_test)\n",
     "\n",
-    "metrics_lr = calculate_metrics(y_test_real, y_pred_lr)\n",
+    "metrics_lr_real = calculate_metrics(y_test_real, y_pred_lr_clp, escala='real')\n",
     "\n",
-    "for metric, value in metrics_lr.items():\n",
+    "for metric, value in metrics_lr_real.items():\n",
     "    if metric == 'MAE' or metric == 'RMSE':\n",
     "        print(f\"{metric}: ${value:,.0f} CLP\")\n",
     "    elif metric == 'MAE_%' or metric == 'MAPE':\n",
@@ -602,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "72f06fa0",
    "metadata": {},
    "outputs": [
@@ -664,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "6fd6b4e1",
    "metadata": {},
    "outputs": [
@@ -733,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "48392500",
    "metadata": {},
    "outputs": [
@@ -814,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "e60c6905",
    "metadata": {},
    "outputs": [
@@ -855,9 +863,6 @@
     }
    ],
    "source": [
-    "from scipy import stats\n",
-    "from scipy.stats import jarque_bera, shapiro\n",
-    "\n",
     "fig, axes = plt.subplots(1, 2, figsize=(12, 5))\n",
     "\n",
     "# Histograma de residuos\n",
@@ -944,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "02d13682",
    "metadata": {},
    "outputs": [
@@ -952,26 +957,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=== SVM - ESCALA LOGARÍTMICA (Performance Real) ===\n",
+      "=== SVM - ESCALA LOGARÍTMICA ===\n",
       "MAE: 0.234\n",
-      "MAE_%: 1.229\n",
       "RMSE: 0.309\n",
       "R²: 0.771\n",
-      "MAPE: 1.230\n",
       "\n",
-      "=== SVM - ESCALA REAL (Interpretabilidad) ===\n",
+      "=== SVM - ESCALA REAL (CLP) ===\n",
       "MAE: $57,060,008 CLP\n",
-      "MAE_%: 25.2%\n",
       "RMSE: $109,319,979 CLP\n",
       "R²: 0.576\n",
+      "MAE_%: 25.2%\n",
       "MAPE: 25.3%\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.svm import SVR\n",
-    "import numpy as np\n",
-    "\n",
     "svm_linear = Pipeline([\n",
     "    ('preprocessor', preprocessor),\n",
     "    ('model', SVR(kernel='linear', C=1.0))\n",
@@ -980,16 +980,16 @@
     "svm_linear.fit(X_train, y_train)\n",
     "y_pred_linear = svm_linear.predict(X_test)\n",
     "\n",
-    "print(\"=== SVM - ESCALA LOGARÍTMICA (Performance Real) ===\")\n",
-    "metrics_log = calculate_metrics(y_test, y_pred_linear)\n",
+    "print(\"=== SVM - ESCALA LOGARÍTMICA ===\")\n",
+    "metrics_log = calculate_metrics(y_test, y_pred_linear, escala='log')  \n",
     "for metric, value in metrics_log.items():\n",
     "    print(f\"{metric}: {value:.3f}\")\n",
     "\n",
-    "print(\"\\n=== SVM - ESCALA REAL (Interpretabilidad) ===\")\n",
+    "print(\"\\n=== SVM - ESCALA REAL (CLP) ===\")\n",
     "y_pred_linear_clp = np.exp(y_pred_linear)\n",
     "y_test_real = np.exp(y_test)\n",
     "\n",
-    "metrics_linear = calculate_metrics(y_test_real, y_pred_linear_clp)\n",
+    "metrics_linear = calculate_metrics(y_test_real, y_pred_linear_clp, escala='real')  \n",
     "\n",
     "for metric, value in metrics_linear.items():\n",
     "    if metric == 'MAE' or metric == 'RMSE':\n",
@@ -998,96 +998,6 @@
     "        print(f\"{metric}: {value:.1f}%\")\n",
     "    else:\n",
     "        print(f\"{metric}: {value:.3f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "32e81d7e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "OPTIMIZACIÓN HIPERPARÁMETROS - SVM LINEAR\n",
-      "Mejores parámetros: {'model__C': 0.1, 'model__epsilon': 0.3}\n",
-      "Mejor score CV: 0.7816\n",
-      "Score original: 0.686\n",
-      "\n",
-      "Métricas optimizadas:\n",
-      "MAE: 0.234\n",
-      "MAE_%: 1.232\n",
-      "RMSE: 0.308\n",
-      "R²: 0.773\n",
-      "MAPE: 1.233\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"OPTIMIZACIÓN HIPERPARÁMETROS - SVM LINEAR\")\n",
-    "\n",
-    "param_grid = {\n",
-    "    'model__C': [0.1, 0.5, 1.0, 2.0, 5.0, 10.0],\n",
-    "    'model__epsilon': [0.01, 0.05, 0.1, 0.2, 0.3]\n",
-    "}\n",
-    "\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "\n",
-    "svm_grid = GridSearchCV(\n",
-    "    svm_linear, \n",
-    "    param_grid, \n",
-    "    cv=5, \n",
-    "    scoring='r2',\n",
-    "    n_jobs=-1\n",
-    ")\n",
-    "\n",
-    "svm_grid.fit(X_train, y_train)\n",
-    "\n",
-    "print(f\"Mejores parámetros: {svm_grid.best_params_}\")\n",
-    "print(f\"Mejor score CV: {svm_grid.best_score_:.4f}\")\n",
-    "print(f\"Score original: 0.686\")\n",
-    "\n",
-    "y_pred_opt = svm_grid.predict(X_test)\n",
-    "metrics_opt = calculate_metrics(y_test, y_pred_opt)\n",
-    "\n",
-    "print(f\"\\nMétricas optimizadas:\")\n",
-    "for metric, value in metrics_opt.items():\n",
-    "    print(f\"{metric}: {value:.3f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "b2d6ec94",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SVM LINEAR OPTIMIZADO:\n",
-      "MAE: 0.250\n",
-      "MAE_%: 1.318\n",
-      "RMSE: 0.337\n",
-      "R²: 0.740\n",
-      "MAPE: 1.318\n"
-     ]
-    }
-   ],
-   "source": [
-    "svm_linear = Pipeline([\n",
-    "    ('preprocessor', preprocessor),\n",
-    "    ('model', SVR(kernel='linear', C=0.1, epsilon=0.3))\n",
-    "])\n",
-    "\n",
-    "svm_linear.fit(X_train, y_train)\n",
-    "y_pred_linear = svm_linear.predict(X_test)\n",
-    "metrics_linear = calculate_metrics(y_test, y_pred_linear)\n",
-    "\n",
-    "print(\"SVM LINEAR OPTIMIZADO:\")\n",
-    "for metric, value in metrics_linear.items():\n",
-    "    print(f\"{metric}: {value:.3f}\")"
    ]
   }
  ],
