actualizando foto matriz reducida

--- a/notebooks/4.training_feature_importance/4.1.RFXGBLGBMTraining.ipynb
+++ b/notebooks/4.training_feature_importance/4.1.RFXGBLGBMTraining.ipynb
@@ -936,50 +936,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "576c641a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RANDOM FOREST\n",
-      "MAE: 40438200.734\n",
-      "MAE_%: 17.769\n",
-      "RMSE: 62782522.451\n",
-      "R²: 0.867\n",
-      "MAPE: 21.960\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"RANDOM FOREST\")\n",
-    "\n",
-    "rf_pipeline = Pipeline([\n",
-    "    ('preprocessor', preprocessor),\n",
-    "    ('model', RandomForestRegressor(\n",
-    "        n_estimators=100,\n",
-    "        max_depth=10,\n",
-    "        min_samples_split=10,\n",
-    "        min_samples_leaf=5,\n",
-    "        bootstrap=True,\n",
-    "        max_samples=None,\n",
-    "        max_features='sqrt',\n",
-    "        random_state=42\n",
-    "    ))\n",
-    "])\n",
-    "\n",
-    "rf_pipeline.fit(X_train_reduced, y_train_reduced)\n",
-    "y_pred_rf = rf_pipeline.predict(X_test_reduced)\n",
-    "metrics_rf = calculate_metrics(y_test_reduced, y_pred_rf)\n",
-    "\n",
-    "for metric, value in metrics_rf.items():\n",
-    "    print(f\"{metric}: {value:.3f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
    "id": "a1ffc210",
    "metadata": {},
@@ -1226,6 +1182,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "id": "8f26bf97",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RANDOM FOREST\n",
+      "MAE: 40567504.908\n",
+      "MAE_%: 17.825\n",
+      "RMSE: 63237940.463\n",
+      "R²: 0.865\n",
+      "MAPE: 21.926\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"RANDOM FOREST\")\n",
+    "\n",
+    "rf_pipeline = Pipeline([\n",
+    "    ('preprocessor', preprocessor),\n",
+    "    ('model', RandomForestRegressor(\n",
+    "        n_estimators=100,\n",
+    "        max_depth=10,\n",
+    "        min_samples_split=10,\n",
+    "        min_samples_leaf=5,\n",
+    "        bootstrap=True,\n",
+    "        max_samples=0.8,\n",
+    "        max_features='sqrt',\n",
+    "        random_state=42\n",
+    "    ))\n",
+    "])\n",
+    "\n",
+    "rf_pipeline.fit(X_train_reduced, y_train_reduced)\n",
+    "y_pred_rf = rf_pipeline.predict(X_test_reduced)\n",
+    "metrics_rf = calculate_metrics(y_test_reduced, y_pred_rf)\n",
+    "\n",
+    "for metric, value in metrics_rf.items():\n",
+    "    print(f\"{metric}: {value:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "id": "dae579ef",
    "metadata": {},
@@ -1320,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "03ee5f7c",
    "metadata": {},
    "outputs": [
@@ -1328,7 +1328,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "🌲 Optimizing RF: 100%|█| 75/75 [03:06<00:00,  2.49s/it] , Best=3960692053514734, Current=3989131350\n"
+      "🌲 Optimizing RF: 100%|█| 75/75 [02:49<00:00,  2.25s/it] , Best=3960692053514734, Current=3989131350\n"
      ]
     },
     {
@@ -1345,21 +1345,21 @@
       "📊 COMPARACIÓN DE MÉTRICAS\n",
       "============================================================\n",
       "      Modelo Original Modelo Optimizado   Mejora\n",
-      "MAE          40438201          36523060   +9.68%\n",
-      "MAE_%          17.77%            16.05%   +9.68%\n",
-      "RMSE         62782522          60453394   +3.71%\n",
-      "R²             0.8666            0.8763   +1.12%\n",
-      "MAPE           21.96%            19.25%  +12.32%\n",
+      "MAE          40567505          36523060   +9.97%\n",
+      "MAE_%          17.83%            16.05%   +9.97%\n",
+      "RMSE         63237940          60453394   +4.40%\n",
+      "R²             0.8646            0.8763   +1.35%\n",
+      "MAPE           21.93%            19.25%  +12.19%\n",
       "\n",
       "🔧📈 COMPARACIÓN DE HIPERPARÁMETROS E IMPORTANCIA\n",
       "==========================================================================================\n",
       "                  Modelo Original Modelo Optimizado Importancia Porcentaje\n",
-      "max_features                 sqrt              log2      0.5266      52.7%\n",
-      "bootstrap                    True             False      0.3053      30.5%\n",
-      "min_samples_leaf                5                 1      0.0642       6.4%\n",
-      "n_estimators                  100               219      0.0553       5.5%\n",
-      "max_depth                      10                23      0.0440       4.4%\n",
-      "min_samples_split              10                 4      0.0046       0.5%\n",
+      "max_features                 sqrt              log2      0.5593      55.9%\n",
+      "bootstrap                    True             False      0.3187      31.9%\n",
+      "min_samples_leaf                5                 1      0.0588       5.9%\n",
+      "max_depth                      10                23      0.0319       3.2%\n",
+      "n_estimators                  100               219      0.0289       2.9%\n",
+      "min_samples_split              10                 4      0.0025       0.3%\n",
       "max_samples                  None               N/A         N/A        N/A\n",
       "\n",
       "🎉 ¡Optimización completada!\n"
@@ -1444,7 +1444,6 @@
     "        'Mejora': []\n",
     "    }\n",
     "    \n",
-    "    # Calcular mejoras\n",
     "    for metric in ['MAE', 'MAE_%', 'RMSE', 'R²', 'MAPE']:\n",
     "        if metric == 'R²':\n",
     "            improvement = ((metrics_optimized[metric] - metrics_original[metric]) / abs(metrics_original[metric])) * 100\n",
@@ -1563,14 +1562,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "🚀 Optimizing XGB:   0%|                                                   | 0/100 [00:00<?, ?it/s] "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "🚀 Optimizing XGB: 100%|█| 100/100 [01:00<00:00,  1.64it/s] , Best=3791970938648968, Current=3868532\n"
+      "🚀 Optimizing XGB: 100%|█| 100/100 [00:45<00:00,  2.18it/s] , Best=3791970938648968, Current=3868532\n"
      ]
     },
     {
@@ -1594,16 +1586,16 @@
       "🔧📈 COMPARACIÓN DE HIPERPARÁMETROS E IMPORTANCIA - XGBOOST\n",
       "==========================================================================================\n",
       "                  Modelo Original    Modelo Optimizado Importancia Porcentaje\n",
-      "learning_rate                0.05  0.09656166649479433      0.8598      86.0%\n",
-      "max_depth                       4                    9      0.0401       4.0%\n",
-      "min_child_weight                1                    2      0.0240       2.4%\n",
-      "n_estimators                  150                  130      0.0220       2.2%\n",
-      "reg_alpha                     0.1   3.3222531806465323      0.0159       1.6%\n",
-      "colsample_bytree              1.0   0.6405886488198473      0.0142       1.4%\n",
-      "colsample_bylevel             1.0   0.7565910327363116      0.0094       0.9%\n",
-      "subsample                     1.0   0.8034710029924164      0.0061       0.6%\n",
-      "gamma                         0.0   0.7606725152435914      0.0045       0.5%\n",
-      "reg_lambda                    1.0    7.348246826759013      0.0041       0.4%\n",
+      "learning_rate                0.05  0.09656166649479433      0.8515      85.2%\n",
+      "max_depth                       4                    9      0.0664       6.6%\n",
+      "colsample_bytree              1.0   0.6405886488198473      0.0356       3.6%\n",
+      "min_child_weight                1                    2      0.0108       1.1%\n",
+      "n_estimators                  150                  130      0.0087       0.9%\n",
+      "subsample                     1.0   0.8034710029924164      0.0083       0.8%\n",
+      "reg_alpha                     0.1   3.3222531806465323      0.0062       0.6%\n",
+      "colsample_bylevel             1.0   0.7565910327363116      0.0056       0.6%\n",
+      "reg_lambda                    1.0    7.348246826759013      0.0053       0.5%\n",
+      "gamma                         0.0   0.7606725152435914      0.0016       0.2%\n",
       "\n",
       "🎉 ¡Optimización XGBoost completada!\n"
      ]
@@ -1807,7 +1799,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "💡 Optimizing LGBM: 100%|█| 100/100 [01:54<00:00,  1.15s/it] , Best=3735204809170244, Current=382472\n"
+      "💡 Optimizing LGBM: 100%|█| 100/100 [01:34<00:00,  1.06it/s] , Best=3735204809170244, Current=382472\n"
      ]
     },
     {
@@ -1831,18 +1823,18 @@
       "🔧📈 COMPARACIÓN DE HIPERPARÁMETROS E IMPORTANCIA - LIGHTGBM\n",
       "==========================================================================================\n",
       "                  Modelo Original    Modelo Optimizado Importancia Porcentaje\n",
-      "learning_rate                0.05  0.06270529793455622      0.6837      68.4%\n",
-      "min_child_samples               1                    5      0.1213      12.1%\n",
-      "max_depth                       4                   12      0.0461       4.6%\n",
-      "subsample_freq                  0                    3      0.0391       3.9%\n",
-      "reg_lambda                    0.0    7.877435752032006      0.0250       2.5%\n",
-      "min_split_gain                0.0   0.1691096644323359      0.0195       1.9%\n",
-      "colsample_bytree              1.0   0.5133111295248126      0.0155       1.5%\n",
-      "n_estimators                  150                  180      0.0137       1.4%\n",
-      "reg_alpha                     0.0    9.952360162301357      0.0132       1.3%\n",
-      "num_leaves                     50                  242      0.0116       1.2%\n",
-      "subsample                     1.0   0.5387110601808947      0.0098       1.0%\n",
-      "min_child_weight            0.001   0.9563601038854345      0.0015       0.1%\n",
+      "learning_rate                0.05  0.06270529793455622      0.6511      65.1%\n",
+      "min_child_samples               1                    5      0.1576      15.8%\n",
+      "subsample_freq                  0                    3      0.0552       5.5%\n",
+      "max_depth                       4                   12      0.0535       5.4%\n",
+      "subsample                     1.0   0.5387110601808947      0.0156       1.6%\n",
+      "reg_lambda                    0.0    7.877435752032006      0.0126       1.3%\n",
+      "min_split_gain                0.0   0.1691096644323359      0.0124       1.2%\n",
+      "reg_alpha                     0.0    9.952360162301357      0.0109       1.1%\n",
+      "colsample_bytree              1.0   0.5133111295248126      0.0108       1.1%\n",
+      "num_leaves                     50                  242      0.0071       0.7%\n",
+      "min_child_weight            0.001   0.9563601038854345      0.0068       0.7%\n",
+      "n_estimators                  150                  180      0.0065       0.6%\n",
       "\n",
       "🎉 ¡Optimización LightGBM completada!\n"
      ]
